Итоговое задание 11 спринта - 9 итерация, исправлены ошибки автотеста.