@@ -1,14 +1,15 @@
 package ru.yandex.practicum.filmorate.service;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
+import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.user.InMemoryUserStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -19,15 +20,23 @@ public class UserService {
         this.userStorage = new InMemoryUserStorage();
     }
 
+    @Autowired
     public UserService(UserStorage userStorage) {
         this.userStorage = userStorage;
     }
 
     public User create(User user) {
+        validate(user);
+        normalize(user);
         return userStorage.create(user);
     }
 
     public User update(User user) {
+        validate(user);
+        normalize(user);
+        userStorage.getById(user.getId())
+                .orElseThrow(() -> new NotFoundException("Пользователь с id " + user.getId() + " не найден"));
+
         return userStorage.update(user);
     }
 
@@ -40,47 +49,57 @@ public class UserService {
                 .orElseThrow(() -> new NotFoundException("Пользователь с id " + id + " не найден"));
     }
 
-    public void addFriend(Long id, Long friendId) {
-        User user = getById(id);
+    public void addFriend(Long userId, Long friendId) {
+        User user = getById(userId);
         User friend = getById(friendId);
 
         user.getFriends().add(friendId);
-        friend.getFriends().add(id);
+        friend.getFriends().add(userId);
 
         userStorage.update(user);
         userStorage.update(friend);
     }
 
-    public void removeFriend(Long id, Long friendId) {
-        User user = getById(id);
+    public void removeFriend(Long userId, Long friendId) {
+        User user = getById(userId);
         User friend = getById(friendId);
-
-        Set<Long> userFriends = user.getFriends();
-        if (!userFriends.contains(friendId)) {
-            throw new NotFoundException("Пользователь " + friendId + " не является другом пользователя " + id);
-        }
-
-        userFriends.remove(friendId);
-        friend.getFriends().remove(id);
+        user.getFriends().remove(friendId);
+        friend.getFriends().remove(userId);
 
         userStorage.update(user);
         userStorage.update(friend);
     }
 
-    public List<User> getFriends(Long id) {
-        User user = getById(id);
-        return user.getFriends().stream()
-                .map(this::getById)
-                .collect(Collectors.toList());
+    public List<User> getFriends(Long userId) {
+        User user = getById(userId);
+        return user.getFriends().stream().map(this::getById).toList();
     }
 
-    public List<User> getCommonFriends(Long id, Long otherId) {
-        User u1 = getById(id);
+    public List<User> getCommonFriends(Long userId, Long otherId) {
+        User u1 = getById(userId);
         User u2 = getById(otherId);
 
         return u1.getFriends().stream()
                 .filter(u2.getFriends()::contains)
                 .map(this::getById)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private void normalize(User user) {
+        if (user.getName() == null || user.getName().isBlank()) {
+            user.setName(user.getLogin());
+        }
+    }
+
+    private void validate(User user) {
+        if (user.getEmail() == null || user.getEmail().isBlank() || !user.getEmail().contains("@")) {
+            throw new ValidationException("Некорректный email");
+        }
+        if (user.getLogin() == null || user.getLogin().isBlank() || user.getLogin().contains(" ")) {
+            throw new ValidationException("Логин не может быть пустым или содержать пробелы");
+        }
+        if (user.getBirthday() != null && user.getBirthday().isAfter(LocalDate.now())) {
+            throw new ValidationException("Дата рождения не может быть в будущем");
+        }
     }
 }
